WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37234
[V8] Fix crash in NodeFilterCondition in detached iframe
https://bugs.webkit.org/show_bug.cgi?id=37234
Summary
[V8] Fix crash in NodeFilterCondition in detached iframe
Vitaly Repeshko
Reported
2010-04-07 15:06:56 PDT
[V8] Fix crash in NodeFilterCondition in detached document
Attachments
patch v1
(528.83 KB, patch)
2010-04-07 15:34 PDT
,
Vitaly Repeshko
vitalyr
: review-
Details
Formatted Diff
Diff
patch v2
(5.91 KB, patch)
2010-04-07 15:39 PDT
,
Vitaly Repeshko
dglazkov
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vitaly Repeshko
Comment 1
2010-04-07 15:34:09 PDT
Created
attachment 52791
[details]
patch v1
Vitaly Repeshko
Comment 2
2010-04-07 15:39:41 PDT
Created
attachment 52792
[details]
patch v2
Dimitri Glazkov (Google)
Comment 3
2010-04-07 21:04:23 PDT
Comment on
attachment 52792
[details]
patch v2 can we use this func in other places too?
Vitaly Repeshko
Comment 4
2010-04-08 03:16:48 PDT
(In reply to
comment #3
)
> (From update of
attachment 52792
[details]
) > can we use this func in other places too?
Yes, it actually should also be used in xpath ns resolver. I updated it as well.
Vitaly Repeshko
Comment 5
2010-04-08 03:17:09 PDT
M LayoutTests/ChangeLog A LayoutTests/fast/dom/node-filter-detached-iframe-crash-expected.txt A LayoutTests/fast/dom/node-filter-detached-iframe-crash.html M WebCore/ChangeLog M WebCore/bindings/v8/V8DOMWrapper.h M WebCore/bindings/v8/V8NodeFilterCondition.cpp M WebCore/bindings/v8/V8Proxy.cpp M WebCore/bindings/v8/V8Proxy.h M WebCore/bindings/v8/custom/V8CustomXPathNSResolver.cpp M WebCore/bindings/v8/custom/V8CustomXPathNSResolver.h M WebCore/bindings/v8/custom/V8DocumentCustom.cpp Committed
r57269
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug