WebCore/bindings/v8/V8DOMWrapper.h
@@ -98,7 +98,7 @@ namespace WebCore {
             if (V8XPathNSResolver::HasInstance(value))
                 resolver = V8XPathNSResolver::toNative(v8::Handle<v8::Object>::Cast(value));
             else if (value->IsObject())
-                resolver = V8CustomXPathNSResolver::create(proxy, value->ToObject());
+                resolver = V8CustomXPathNSResolver::create(value->ToObject());
             return resolver;
         }
 #endif
