WebCore/bindings/v8/custom/V8CustomXPathNSResolver.h
@@ -49,15 +49,14 @@ class V8Proxy;
 // must not exceed the lifetime of the passed handle.
 class V8CustomXPathNSResolver : public XPathNSResolver {
 public:
-    static PassRefPtr<V8CustomXPathNSResolver> create(V8Proxy* proxy, v8::Handle<v8::Object> resolver);
+    static PassRefPtr<V8CustomXPathNSResolver> create(v8::Handle<v8::Object> resolver);
 
     virtual ~V8CustomXPathNSResolver();
     virtual String lookupNamespaceURI(const String& prefix);
 
 private:
-    V8CustomXPathNSResolver(V8Proxy* proxy, v8::Handle<v8::Object> resolver);
+    explicit V8CustomXPathNSResolver(v8::Handle<v8::Object> resolver);
 
-    V8Proxy* m_proxy;
     v8::Handle<v8::Object> m_resolver;  // Handle to resolver object.
 };
 
